# OpenGL

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  README.md
App/: App.cpp  CMakeLists.txt
App/res/shaders/: Basic.shader
App/src/: App.cpp
